--- a/.github/workflow/frontend-cicd.yml
+++ b/.github/workflow/frontend-cicd.yml
@@ -33,5 +33,5 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: "eu-north-1" # or your region
-          SOURCE_DIR: "frontend" # Adjust this if your build output is in a different directory
+          SOURCE_DIR: "dist" # Adjust this if your build output is in a different directory
       
